# PasskeyManager

./: .gitattributes  .gitignore  App.xaml.cpp  App.xaml.h  AppxManifest.xml  BridgeHost.sln  Cargo.toml  Credential.cpp  Credential.h  Credential.idl  DelayLoad.h  Dockerfile  GetAssertion.xaml  MainPage.xaml  MainPage.xaml.cpp  MainPage.xaml.h  MainWindow.xaml.cpp  MakeCredentialPage.xaml  Package.appxmanifest  PasskeyManager.rc  PasskeyManager.sln  PasskeyManager.vcxproj  PasskeyManager.vcxproj.filters  README.md  appsetting.local.example.json  dev_login_body.txt  dev_login_headers.txt  happyfactory.pfx  packages.config  pch.h  rc PasskeyManager.rc  tsupasswd_core_HappyFactory.cer  tsupasswd_core_TemporaryKey.pfx
.github/: pull_request_template.md
PluginAuthenticator/: PluginAuthenticatorImpl.cpp  PluginAuthenticatorImpl.h
PluginManagement/: PluginCredentialManager.cpp  PluginCredentialManager.h  PluginRegistrationManager.cpp  PluginRegistrationManager.h
data/: vault-store.db  vault-store.db-shm  vault-store.db-wal
docs/: PR_TEMPLATE_SNIPPETS.md  README.md  audit_submission_form.csv  check_request_id_gap_blocks.cmd  check_request_id_gap_blocks.ps1  check_sync_log_keys.cmd  check_sync_log_keys_samples.cmd  check_sync_runtime_log_keys.cmd  check_sync_runtime_log_keys.ps1  check_sync_runtime_log_keys_samples.cmd  chrome-native-messaging-host.example.json  chrome_native_messaging_host.md  (+25 more)
sync-axum-api/: .env  Cargo.toml  tsupasswd_js.code-workspace
sync-axum-api/data/: vault-store.db  vault-store.db-shm  vault-store.db-wal
sync-axum-api/src/: main.rs
(+77 files in other folders)
